🔧 SecurityConfig 및 WebConfig 수정: CORS 설정에 새로운 허용 출처 추가 및 코드 정리